fixing title on mobile

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -619,6 +619,9 @@ and (max-width: 800px)
     .banner-title
     {
         font-size: 4.1em;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
     h3
     {
